Dashboard percentage graph

--- a/veoc/templates/veoc/airline_travellers.html
+++ b/veoc/templates/veoc/airline_travellers.html
@@ -286,7 +286,7 @@
             <div id="elementH"></div>
         <div>
         <hr>
-        <button class="btn btn-lg btn-success pull-left" type="button" onclick="saveDiv()"><i class="glyphicon glyphicon-save"></i> Save PDF</button>
+{#        <button class="btn btn-lg btn-success pull-left" type="button" onclick="saveDiv()"><i class="glyphicon glyphicon-save"></i> Save PDF</button>#}
 
         </div>
         </div>
