fx for airport list datatable

--- a/veoc/templates/veoc/airport_list_incomplete.html
+++ b/veoc/templates/veoc/airport_list_incomplete.html
@@ -127,7 +127,7 @@
                           </tr>
                           </thead>
                           <tbody>
-                          {% for follow in traveller_details %}
+                          {% for follow in my_list_data %}
                           <tr>
                             <td>{{ follow.patient_contacts.last_name }}</td>
                             <td>{{ follow.first_name }}</td>
